# rustphy

./: .gitignore  Cargo.toml  GITHUB_PAGES_SETUP.md  Makefile  README.md  README.me  _config.yml  index.md  test.wasm  test.wat  test_formatted.wat
_data/: lectures.yml
_layouts/: lecture.html
bytecode/json/: test_arithmetic.json  test_comparison.json  test_conditional.json  test_function.json  test_unary.json  test_variables.json
docs/: GRAMMAR.md  QUICK_REFERENCE.md
examples/: 01_hello_world.gph  02_variables_operators.gph  03_functions.gph  04_conditionals.gph  05_loops.gph  06_arrays.gph  07_recursion.gph  08_advanced.gph  README.md
frontend/: output.wasm  output.wat  output_formatted.wat  playground.html
learning/MIT_opencourseware/lecture_1_intro/: data.md
learning/compiler_course/: index.md
learning/compiler_course/lecture_1_intro/: data.md
learning/compiler_course/lecture_2/: data.md
learning/compiler_course/lecture_2/challenges/: challenge_1_nfa_simulator.py  challenge_2_subset_construction.py  challenge_3_regex_to_nfa.py  challenge_4_balanced_parser.py
learning/pratt_parser/: lexer.py  src.py
scripts/: README.md  dev.sh  watch-and-build.sh
src/: ast.rs  bytecode_compiler.rs  compiler.rs  environment.rs  escape_analysis.rs  instruction.rs  lexer.rs  lib.rs  machine.rs  parser.rs  parser_v2.rs  repl.rs  symbol_table.rs  token.rs  wasm_compiler.rs  wasm_environment.rs  wasm_simple_compiler.rs
wasm-binaries/: call.wasm  mem.wasm  simple.wasm
wasm-examples/: mem.wat  saved.wat  task_1.wat  task_2.wat  test.wat  test_saved.wat
