[package]
name = "rustphy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"  # This is the key dependency!
wat = "1.0"
wasmprinter = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib is needed for WASM

# Optional but helpful for debugging in browser
[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.wee_alloc]
version = "0.4"
optional = true

